--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,35 @@
 }
 
 body{
+    font-family: 'Phudu', sans-serif;
     height: 100vh;
     display: flex;
+}
+
+.col{
+    border: 1px solid black;
+    flex: 1;
+    background: rgba(17, 45, 156, 0.514);
+    display: flex;
+    flex-direction:column ;
+    justify-content: space-around;
+    align-items:center ;
+}
+
+.col h2 {
+    padding: 10px;
+    color: white;
+    border-radius: 10px ;
+    transition: background 1s;
+}
+
+.col h2:hover {
+    background: rgba(0,0,0,0.1);
+    cursor:pointer ;
+}
+
+.col button {
+    border:none;
+    background: transparent;
+    font-size:x-large;
 }
