--- a/styles.css
+++ b/styles.css
@@ -12,10 +12,10 @@ body{
 
 .col{
     border: 1px solid black;
-    flex: 1;
+    flex:1;
     background: rgba(17, 45, 156, 0.514);
-    display: flex;
-    flex-direction:column ;
+    display:flex;
+    flex-direction: column;
     justify-content: space-around;
     align-items:center ;
 }
@@ -36,4 +36,14 @@ body{
     border:none;
     background: transparent;
     font-size:x-large;
+    color: white;
+    padding: 10px;
+    border-radius: 10px ;
+}
+
+.col button:hover {
+    background: rgba(0,0,0,0.1);
+    cursor:pointer ;
+    transition: background 1s;
+    
 }
